# vncbox

./: .gitignore  .gitmodules  Makefile.am  README.md  configure.ac
data/: Makefile.am  dbus-config.xml  example.profile  upnp.xml  vncbox-introspect.xml  vncbox-ui.xml  vncbox.conf
po/: POTFILES.in  fr.po
scripts/: create_vncjail-archlinux
scripts/skel/: .bashrc
src/: Makefile.am  dbusdaemon.cc  dbusdaemon.h  displaywatch-x.cc  displaywatch.cc  displaywatch.h  notifydata.cc  notifydata.h  passwd.cc  passwd.h  process.cc  process.h  profile.cc  profile.h  randomport.cc  randomport.h  serializer.cc  serializer.h  setuidprocess.cc  setuidprocess.h  sysconf.cc  sysconf.h  upnpcontrolpoint.cc  upnpcontrolpoint.h  vncbox-exec.cc  vncbox-notify.cc  vncbox.cc  vncboxservice.cc  vncboxservice.h  vncboxwindow.cc  vncboxwindow.h  vncclientsinfodialog.cc  vncclientsinfodialog.h  vncserver.cc  vncserver.h  vncserverinfodialog.cc  vncserverinfodialog.h  xprocess.cc  xprocess.h  xserver.cc  (+1 more)
